--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     <span class="week-label">Aktif Hafta</span>
                     <span class="week-number">6</span>
                 </div>
-                <div class="week-date">03 Şubat - 09 Şubat 2026</div>
+                <div class="week-date">02 Şubat - 08 Şubat 2026</div>
             </div>
             <div class="week-navigation">
                 <button class="week-btn" onclick="alert('Önceki hafta verileri yükleniyor...')">← Hafta 5</button>
@@ -526,19 +526,19 @@
                 <div class="stat-label">GPS Takılı</div>
                 <div class="stat-value">2,857</div>
                 <div class="stat-change">
-                    <span>▲</span> %75.8 kapsama
+                    <span>▲</span> %75.78 kapsama
                 </div>
             </div>
             <div class="stat-card animate">
                 <div class="stat-label">Aktif GPS</div>
-                <div class="stat-value">2,488</div>
+                <div class="stat-value">2,666</div>
                 <div class="stat-change">
-                    <span>▲</span> %87.1 aktiflik oranı
+                    <span>▲</span> %93.31 aktiflik oranı
                 </div>
             </div>
             <div class="stat-card animate">
                 <div class="stat-label">GPS Pasif</div>
-                <div class="stat-value">369</div>
+                <div class="stat-value">191</div>
                 <div class="stat-change negative">
                     <span>▼</span> İyileştirme gerekli
                 </div>
@@ -580,9 +580,9 @@
                             <td>2,531</td>
                             <td>2,504</td>
                             <td>98.93%</td>
-                            <td>2,179</td>
-                            <td>325</td>
-                            <td>13%</td>
+                            <td>2,353</td>
+                            <td>151</td>
+                            <td>6%</td>
                             <td><span class="badge badge-success">Mükemmel</span></td>
                         </tr>
                         <tr>
@@ -590,9 +590,9 @@
                             <td>324</td>
                             <td>324</td>
                             <td>100%</td>
-                            <td>293</td>
-                            <td>31</td>
-                            <td>10%</td>
+                            <td>297</td>
+                            <td>27</td>
+                            <td>8%</td>
                             <td><span class="badge badge-success">Mükemmel</span></td>
                         </tr>
                         <tr>
@@ -603,7 +603,7 @@
                             <td>4</td>
                             <td>10</td>
                             <td>71%</td>
-                            <td><span class="badge badge-danger">Kritik</span></td>
+                            <td><span class="badge badge-danger">İyileştir</span></td>
                         </tr>
                         <tr>
                             <td><span class="badge badge-primary">SWAP BODY</span></td>
@@ -622,7 +622,7 @@
             <div style="margin-top: 2rem;">
                 <div style="margin-bottom: 0.5rem; display: flex; justify-content: space-between;">
                     <span style="font-weight: 600;">Genel GPS Aktiflik Oranı</span>
-                    <span style="font-family: 'JetBrains Mono', monospace; font-weight: 700; font-size: 1.1rem; color: var(--success);">87.1%</span>
+                    <span style="font-family: 'JetBrains Mono', monospace; font-weight: 700; font-size: 1.1rem; color: var(--success);">93.31%</span>
                 </div>
                 <div class="progress-bar-container">
                     <div class="progress-bar" style="width: 87.1%"></div>
@@ -666,45 +666,45 @@
                     <tbody>
                         <tr>
                             <td><span class="badge badge-primary">KONTEYNER</span></td>
-                            <td>🇹🇷 TR</td>
+                            <td>TR </td>
                             <td>0</td>
                             <td>10</td>
                             <td>10</td>
                         </tr>
                         <tr>
                             <td><span class="badge badge-primary">SWAP BODY</span></td>
-                            <td>🇳🇱 NL</td>
-                            <td>1</td>
+                            <td>TR </td>
                             <td>0</td>
-                            <td>1</td>
+                            <td>2</td>
+                            <td>2</td>
                         </tr>
                         <tr>
                             <td><span class="badge badge-primary">SWAP BODY</span></td>
-                            <td>🇹🇷 TR</td>
-                            <td>0</td>
-                            <td>2</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <td><span class="badge badge-primary">ŞASİ</span></td>
-                            <td>🇩🇪 DE</td>
+                            <td>DE</td>
                             <td>1</td>
                             <td>0</td>
                             <td>1</td>
                         </tr>
                         <tr>
                             <td><span class="badge badge-primary">ŞASİ</span></td>
-                            <td>🇪🇸 ES</td>
+                            <td>ES</td>
+                            <td>0</td>
                             <td>1</td>
                             <td>1</td>
-                            <td>2</td>
                         </tr>
                         <tr>
                             <td><span class="badge badge-primary">ŞASİ</span></td>
-                            <td>🇫🇷 FR</td>
-                            <td>1</td>
-                            <td>9</td>
+                            <td>FR</td>
+                            <td>3</td>
+                            <td>7</td>
                             <td>10</td>
+                        </tr>
+                        <tr>
+                            <td><span class="badge badge-primary">ŞASİ</span></td>
+                            <td>TR</td>
+                            <td>3</td>
+                            <td>13</td>
+                            <td>16</td>
                         </tr>
                         <tr>
                             <td><span class="badge badge-primary">ŞASİ</span></td>
@@ -726,35 +726,35 @@
                     <div class="insight-icon">📅</div>
                     <div class="insight-title">Haftalık İlerleme</div>
                     <div class="insight-text">
-                        Hafta 6 verileri toplanıyor. Önceki haftalara göre GPS aktiflik oranı %87.1'de stabil seyrediyor.
+                        Hafta 6 verileri toplanıyor. Bu hafta aktif olan araç oranı %93.31'dir.
                     </div>
                 </div>
                 <div class="insight-card">
                     <div class="insight-icon">🔧</div>
                     <div class="insight-title">Pasif GPS Sorunları</div>
                     <div class="insight-text">
-                        369 araçta GPS pasif durumda. Bakım ve onarım için öncelik verilmeli, %87.1'den %95'e çıkarılabilir.
+                        191 araçta GPS pasif durumda. Bakım ve onarım için öncelik verilmeli, %93.31'den %95'e çıkarılabilir.
                     </div>
                 </div>
                 <div class="insight-card">
                     <div class="insight-icon">🌍</div>
                     <div class="insight-title">Coğrafi Dağılım</div>
                     <div class="insight-text">
-                        TR (114), DE (80), IT (64) en yüksek treyler sayısına sahip. Bölgesel bakım merkezleri güçlendirilmeli.
+                        TR (64), DE (41), IT (29) en yüksek treyler sayısına sahip. Bölgesel bakım merkezleri güçlendirilmeli.
                     </div>
                 </div>
                 <div class="insight-card">
                     <div class="insight-icon">⚡</div>
                     <div class="insight-title">İş Emri Verimliliği</div>
                     <div class="insight-text">
-                        Toplam 325 treylerin 228'i iş emirli (%70.2). Rotasyon optimizasyonu ile %80'e çıkarılabilir.
+                        Toplam 151 treylerin 111'i iş emirli (%73.5). Rotasyon optimizasyonu ile %80'e çıkarılabilir.
                     </div>
                 </div>
             </div>
         </div>
 
         <footer>
-            <p>© 2026 DFDS Filo Yönetim Sistemi | Hafta 6 Raporu (03-09 Şubat 2026) | Son güncelleme: 02 Şubat 2026</p>
+            <p>© 2026 DFDS Filo Yönetim Sistemi | Hafta 6 Raporu (02-08 Şubat 2026) | Son güncelleme: 06 Şubat 2026</p>
         </footer>
     </div>
 
@@ -822,11 +822,11 @@
 
         // Country Chart
         const countryData = [
-            {ulke: 'TR', toplam: 114},
-            {ulke: 'DE', toplam: 80},
-            {ulke: 'IT', toplam: 64},
-            {ulke: 'FR', toplam: 20},
-            {ulke: 'GR', toplam: 16}
+            {ulke: 'DE', toplam: 40},
+            {ulke: 'TR', toplam: 36},
+            {ulke: 'IT', toplam: 29},
+            {ulke: 'FR', toplam: 19},
+            {ulke: 'BE', toplam: 7}
         ];
 
         const countryCtx = document.getElementById('countryChart').getContext('2d');
@@ -892,13 +892,13 @@
 
         // Populate Country Table
         const allCountryData = [
-            {ulke: 'TR', is_emirli: 71, is_emirsiz: 43, toplam: 114},
-            {ulke: 'DE', is_emirli: 64, is_emirsiz: 16, toplam: 80},
-            {ulke: 'IT', is_emirli: 56, is_emirsiz: 8, toplam: 64},
-            {ulke: 'FR', is_emirli: 3, is_emirsiz: 17, toplam: 20},
-            {ulke: 'GR', is_emirli: 16, is_emirsiz: 0, toplam: 16},
-            {ulke: 'BE', is_emirli: 2, is_emirsiz: 9, toplam: 11},
-            {ulke: 'BG', is_emirli: 6, is_emirsiz: 0, toplam: 6},
+            {ulke: 'TR', is_emirli: 35, is_emirsiz: 29, toplam: 64},
+            {ulke: 'DE', is_emirli: 34, is_emirsiz: 7, toplam: 41},
+            {ulke: 'IT', is_emirli: 25, is_emirsiz: 4, toplam: 29},
+            {ulke: 'FR', is_emirli: 5, is_emirsiz: 24, toplam: 29},
+            {ulke: 'GR', is_emirli: 3, is_emirsiz: 0, toplam: 3},
+            {ulke: 'BE', is_emirli: 1, is_emirsiz: 6, toplam: 7},
+            {ulke: 'BG', is_emirli: 1, is_emirsiz: 0, toplam: 1},
             {ulke: 'GB', is_emirli: 3, is_emirsiz: 1, toplam: 4},
             {ulke: 'NL', is_emirli: 2, is_emirsiz: 1, toplam: 3},
             {ulke: 'DK', is_emirli: 1, is_emirsiz: 0, toplam: 1},
