--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             </div>
             <div class="week-navigation">
                 <button class="week-btn" onclick="alert('Önceki hafta verileri yükleniyor...')">← Hafta 5</button>
-                <button class="week-btn" onclick="window.location.href='https://emineph.github.io/GPS-Tracker-7thWeek/'">← Hafta 7 </button>
+                <button class="week-btn" onclick="window.location.href='https://emineph.github.io/GPS-Tracker-7thWeek/'"> Hafta 7  →</button>
             </div>
         </div>
 
